# UWASIC-ALG

./: .gitignore  Cargo.toml  INFO.md  OPTIMIZATION.md  README.md  build.rs  pyproject.toml  shell.nix
.github/workflows/: build.yaml  publish.yaml  release.yaml  test.yaml
examples/: Optimizer.py
examples/spice/: .OpAmp_tb_18663  .OpAmp_tb_18937  .OpAmp_tb_18997  .OpAmp_tb_19015  .OpAmp_tb_19049  .OpAmp_tb_19057  .OpAmp_tb_19067  .OpAmp_tb_19096  .OpAmp_tb_19105  .OpAmp_tb_19119  .OpAmp_tb_19148  .OpAmp_tb_19224  .OpAmp_tb_19239  .OpAmp_tb_19254  .OpAmp_tb_19362  .OpAmp_tb_19404  .OpAmp_tb_19525  .OpAmp_tb_19533  .OpAmp_tb_19547  .OpAmp_tb_19584  .OpAmp_tb_19662  .OpAmp_tb_25560  .OpAmp_tb_25705  .OpAmp_tb_25714  .OpAmp_tb_25741  .OpAmp_tb_25768  .OpAmp_tb_25779  .OpAmp_tb_25817
examples/template/: OpAmp.sch  OpAmp_tb.sch  temp_schemsym_074cadce1ab9487588049730c1b3c898.sch  temp_schemsym_1fd28024f32e4d45aa4f61a62d228279.sch  temp_schemsym_204802182e594a91b3edb52b763f5c80.sch  temp_schemsym_2550c5bd46b84c7187af88445c3944bd.sch  temp_schemsym_3f3984ea941542ae83fc778e4208abba.sch  temp_schemsym_49fe7743f5934db29f42cd005ca30240.sch  temp_schemsym_4c6424364ae44850818b02137522fdf9.sch  temp_schemsym_6fea769cc3ce47419e47b0d77609440c.sch  temp_schemsym_90a6b1f16a344ca6b2fa02771f8aaf74.sch  temp_schemsym_ba97f9655c8a4c628645f348d918d925.sch  temp_schemsym_cf3a78269aa7406fb6fe9f9eb830038a.sch  temp_schemsym_d88812a756274bb8bbc2c2db1f6fb03b.sch  temp_schemsym_e1a9748d23bd4cf3a8495d43847ae7cf.sch  temp_schemsym_fbbd6f2dd5494676a24e8e8889be9c77.sch  temp_testbench_0082af0dd0694c8bb9b7edf803f41a63.sch  temp_testbench_0144bff765414634a8b587474c59c6d4.sch  temp_testbench_01a0b4f156944fd582470e787d7f6e64.sch  temp_testbench_02c193101ac441c1a7e3e0ec8e380c03.sch  temp_testbench_043d9610aa0a418a937227c07dab0f8f.sch  temp_testbench_053961ffe3764bd193b41ff3f8722f5b.sch  temp_testbench_070c89468468416eadeb22cebd2e4c1f.sch  temp_testbench_074cadce1ab9487588049730c1b3c898.sch  temp_testbench_09ade49482b14022aeccdd8f2047fed7.sch  temp_testbench_0a3e0385a93c489895d667fa967981b2.sch  temp_testbench_0ae74b14b8cf4ff6b1354146a3311191.sch  temp_testbench_0c09381a71824e6aa1a7307017ba71ee.sch  temp_testbench_0cecd357f4564d83be8f3f9985b06be4.sch  temp_testbench_0f5433a7606f4333bdb05593cab4122b.sch  temp_testbench_0f57c337527b48479c3df2e223290934.sch  temp_testbench_0f907d9e89384e9db4c4ad8594657001.sch  temp_testbench_0ff4b337b08b47208e39343f4696af49.sch  temp_testbench_11c7583b1a6244b3957d4ffa7a2bc10c.sch  temp_testbench_11ebf38d483f4e92bd53749c8390b894.sch  temp_testbench_11ee7f83bda84a1f8ddd46c908b1570f.sch  temp_testbench_12a6fca3e8b0485694fcf8c6988eddb5.sch  temp_testbench_134538ca8adb4dacb78677288862ee65.sch  temp_testbench_13d0908c86564b7c8c0eb8e168fe2ee6.sch  temp_testbench_15408f43efb14063b81d74e4930fa06a.sch  (+230 more)
examples/template/spice/: .temp_testbench_2ed0443102df4f8786aec65ab82ffbc6_282979  .temp_testbench_3497fea09e934cebba0505461d3a73d0_282882  .temp_testbench_46dc17044daa45d5be87e5b0ebad1b3d_33777  .temp_testbench_54ab28a16c684fbaac717bec65102bad_282865  .temp_testbench_64cd04da13754364be592d5acdec168c_282955  .temp_testbench_9feed9b85a82410683bfde114d9a15ad_282972  .temp_testbench_a4f2332d91384df59b5cf3baa356e14c_33784  .temp_testbench_d871d943fe6d4e7281b2de55d53f3e27_33785
include/: ngspice.h
src/: lib.rs  ngspice.rs  optimizer.rs  pyinterface.rs  python_bindings.rs  solvers.rs  utilities.rs
src/core/: constraints.rs  expression.rs  mod.rs  types.rs
src/optimization/: callback.rs  mod.rs  problem.rs
src/optimization/solvers/: cma_es.rs  mod.rs  newton.rs  particle.rs
src/optimizer/: mod.rs  problem.rs  utils.rs
src/optimizer/solver/: cma_es.rs  particle.rs  traits.rs
src/simulation/: mod.rs  netlist.rs  ngspice.rs  xschem.rs
src/xschem/: mod.rs  objects.rs  parser.rs  writer.rs
src_temp/: lib.rs  pydata.rs  pyinterface.rs
src_temp/optimizer/: mod.rs  problem.rs  simulation.rs  solver.rs
src_temp/xschem/: mod.rs  writer.rs
test/: test_flow.py  test_interface.py
test/template/: OpAmp.sch  OpAmp.sym  OpAmp_tb.sch  OpAmp_tb.spice
tests/: ngspice_test.rs  optimizer_test.rs  xschem_test.rs
tests/test_sample/: eg.sch  eg_tb.sch
