[package]
name = "xschemoptimizer"
version = "0.1.0"
edition = "2024"
authors = ["Omar El-Sawy <ok.elsawy@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Circuit parameter optimization library for XSchem analog design workflows"
repository = "https://github.com/OmarSiwy/XSchemOptimizer"
readme = "README.md"

[dependencies]
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelization
rayon = "1.7"

# Optimization libraries - keeping it simple with well-established crates
argmin = "0.10"
rand = "0.8"

# File system operations
walkdir = "2.4"

# Using Python Interface
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", optional = true }

# High-performance file processing
crossbeam = "0.8"
num_cpus = "1.16"
indexmap = "1.9"

[lib]
crate-type = ["cdylib", "rlib"]
name = "xschemoptimizer"
path = "src/lib.rs"
