[package]
name = "xschemoptimizer"
version = "0.1.0"
edition = "2024"
authors = ["Omar El-Sawy <ok.elsawy@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Circuit parameter optimization library for XSchem analog design workflows"
repository = "https://github.com/OmarSiwy/XSchemOptimizer"
readme = "README.md"

[dependencies]
# Python Interface
pyo3 = { version = "0.26", features = ["extension-module"] }
pythonize = "0.26"
serde = { version = "1.0", features = ["derive"] }

# File I/O
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"
glob = "0.3.3"
indexmap = "2.0"

# Optimization libraries - keeping it simple with well-established crates
argmin = { version = "0.10", features = ["serde1"] }
argmin-math = { version = "0.4", features = ["vec"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "xschemoptimizer"
path = "src/lib.rs"
