[package]
name = "uwasic-optimizer"
version = "0.0.1"
edition = "2021"
authors = ["Omar El-Sawy <ok.elsawy@gmail.com>"]
description = "Circuit parameter optimization library for XSchem analog design workflows"

[lib]
name = "uwasic_optimizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
libc = "0.2"
rng = "0.1.0"
rand = "0.8"
rand_distr = "0.4"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
