[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uwasic-optimizer"
version = "0.0.1"
description = "Circuit parameter optimization library for XSchem analog design workflows"
authors = [{name = "Omar El-Sawy", email = "ok.elsawy@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "maturin>=1.0"]

[tool.maturin]
module-name = "uwasic_optimizer"
bindings = "pyo3"
